<resources>
    <string name="app_name">小说阅读器V</string>
    <string name="title_home">书架</string>
    <string name="title_rule">规则</string>
    <string name="title_setting">设置</string>
    <string name="search_text">搜索书名或者作者</string>
    <string name="search_clear">取消</string>
    <string name="detailed_intro">简介：</string>
    <string name="author">作者：</string>
    <string name="last">最新：</string>
    <string name="detailed_update_time">目录</string>
    <string name="progress_text">%1$d/%2$d</string>
    <string name="pack">打包</string>
    <string name="cache">缓存</string>
    <string name="setting">设置</string>
    <string name="remove">删除</string>
    <string name="other">待定</string>
    <string name="log">日志</string>


    <!-- Preference Titles -->
    <string name="basics">基本设置</string>
    <string name="advanced">高级功能</string>

    <!-- basics Preferences -->
    <string name="is_cache">是否启动缓存</string>

    <!-- advanced Preferences -->
    <string name="is_log">是否启动日志悬浮窗</string>
    <string name="test_read">是否启动新版文本阅读（测试性功能）</string>

    <string name="import_book">导入本地书本</string>

    <string name="menu_refresh_tip">重新加载当前页面内容</string>
    <string name="menu_back_tip">返回</string>
    <string name="font_setting"> ● 字体设置 ● </string>

    <string name="font_size">0.0</string>
    <string name="font_field_spacing_title">段距</string>
    <string name="font_spacing_title">字距</string>
    <string name="font_line_spacing_title">行距</string>
    <string name="font_style_title">字体</string>
    <string name="font_style">系统字体</string>
    <string name="font_size_title">字号</string>
    <string name="font_margin_title">边距</string>
    <string name="progress_tip">加载中,请耐心等待</string>
    <string name="select_start">文本选择开始位置</string>
    <string name="select_end">文本选择结束位置</string>
    <string name="title_leaderboard">榜单</string>
    <string name="list">榜单</string>
    <string name="right"><![CDATA[>]]></string>


</resources>