<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailed.DetailedFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/detailed_back"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:background="@color/transparent"
        android:ellipsize="end"
        android:padding="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/back_icon"
        app:layout_constraintRight_toLeftOf="@id/detailed_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/detailed_text"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detailed_back"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/detailed_layout"
        layout="@layout/book_linear_item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailed_text" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/detailed_intro"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/detailed_intro"
        app:layout_constraintTop_toBottomOf="@+id/detailed_layout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/detailed_update_time"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:padding="4dp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:text="@string/detailed_update_time"
        app:layout_constraintTop_toBottomOf="@+id/detailed_intro" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detailed_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_update_time"
        tools:listitem="@layout/recycler_view_item" />

</androidx.constraintlayout.widget.ConstraintLayout>